src/test/borrowck/borrowck_return_borrow.sq
// ignore

fn main() {
    let a: &i32 = returning_reference();
    print_int(*a);
}


fn returning_reference() -> &i32 {
    let a: &i32 = &42;
    a    
}
